--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+    <head>
+        <meta charset="utf-8">
+        <title>Ani Mohan</title>
+        <meta name="description" content="Ani Mohan home page personal site">
+        <meta name="author" content="Ani Mohan">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <!-- <script src="js/scripts.js"></script> -->
+        <h1 id="title">
+            Ani Mohan
+        </h1>
+        <img src="images/me.png" id="profile-pic" />
+        <p class="body-text" id="home-text">
+            I think a lot about consumer products, media, American politics, and emerging markets. I'm interested in nearly everything.    
+            <br><br>
+            Currently, I work and play in San Francisco. I founded and run GameSnacks at <a href="https://area120.google.com/" target="_blank">Area120 @ Google</a>. 
+            <br><br>
+            <a href="">Start here</a> if you don’t know me.
+            <br><br>
+            <a href="">Explore</a> my favorite content. 
+            <br><br>
+            <a href="">Read</a> posts I’ve written.
+            <br><br>
+            <a href="">See</a> images I’ve made.
+            <br><br>
+            Reach out via <a href="https://twitter.com/ani_c_mohan" target="_blank">Twitter</a> or email at anirudh dot c dot mohan gmail.
+        </p>
+    </body>
+</html>
