--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
     </head>
     <body>
         <!-- <script src="js/scripts.js"></script> -->
-        <h1 id="title">
+        <h1 class="title">
             Ani Mohan
         </h1>
-        <img src="images/me.png" id="profile-pic" />
+        <div id="pic-div">
+            <img src="images/me.png" id="profile-pic" />
+        </div>
         <p class="body-text" id="home-text">
-            I think a lot about consumer products, media, American politics, and emerging markets. I'm interested in nearly everything.    
+            I think a lot about consumer software products, media, American politics, and emerging markets. I get easily interested in new topics.    
             <br><br>
-            Currently, I work and play in San Francisco. I founded and run GameSnacks at <a href="https://area120.google.com/" target="_blank">Area120 @ Google</a>. 
+            I work and play in San Francisco. I founded and run GameSnacks at <a href="https://area120.google.com/" target="_blank">Area120 @ Google</a>. 
             <br><br>
-            <a href="">Start here</a> if you don’t know me.
+            <a href="./pages/start-here.html">Start here</a> if you don’t know me.
             <br><br>
-            <a href="">Explore</a> my favorite content. 
+            <a href="./pages/explore.html">Explore</a> my favorite content. 
             <br><br>
-            <a href="">Read</a> posts I’ve written.
-            <br><br>
-            <a href="">See</a> images I’ve made.
+            <a href="./pages/writings.html">Read</a> posts I’ve written.
+            <!-- <br><br> -->
+            <!-- <a href="">See</a> images I’ve made. -->
             <br><br>
             Reach out via <a href="https://twitter.com/ani_c_mohan" target="_blank">Twitter</a> or email at anirudh dot c dot mohan gmail.
         </p>
