adding viewport meta tag and fixing gmail description

--- a/pages/writings.html
+++ b/pages/writings.html
@@ -4,6 +4,7 @@
         <title>Writings - Ani Mohan</title>
         <meta name="description" content="Ani Mohan writings essays writing personal site">
         <meta name="author" content="Ani Mohan">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
