--- a/pages/writings/consumer-social-has-lots-of-room-to-grow.html
+++ b/pages/writings/consumer-social-has-lots-of-room-to-grow.html
@@ -4,6 +4,7 @@
         <title>Consumer social has lots of room to grow</title>
         <meta name="description" content="Consumer social has lots of room to grow">
         <meta name="author" content="Ani Mohan">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../../css/styles.css">
     </head>
