--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Ani Mohan</title>
         <meta name="description" content="Ani Mohan home page personal site">
         <meta name="author" content="Ani Mohan">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -28,7 +29,7 @@
             <!-- <br><br> -->
             <!-- <a href="">See</a> images I’ve made. -->
             <br><br>
-            Reach out via <a href="https://twitter.com/ani_c_mohan" target="_blank">Twitter</a> or email at anirudh dot c dot mohan gmail.
+            Reach out via <a href="https://twitter.com/ani_c_mohan" target="_blank">Twitter</a> or email at anirudh dot c dot mohan at gmail.
         </p>
     </body>
 </html>
