--- a/pages/explore.html
+++ b/pages/explore.html
@@ -4,6 +4,7 @@
         <title>Favorites - Ani Mohan</title>
         <meta name="description" content="Ani Mohan favorites personal site">
         <meta name="author" content="Ani Mohan">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
