--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
         <!-- <script src="js/scripts.js"></script> -->
@@ -14,18 +14,18 @@
             Ani Mohan
         </h1>
         <div id="pic-div">
-            <img src="images/me.png" id="profile-pic" />
+            <img src="./images/me.png" id="profile-pic" />
         </div>
         <p class="body-text" id="home-text">
             I think a lot about consumer software products, media, American politics, and emerging markets. I get easily interested in new topics.    
             <br><br>
             I work and play in San Francisco. I founded and run GameSnacks at <a href="https://area120.google.com/" target="_blank">Area120 @ Google</a>. 
             <br><br>
-            <a href="./pages/start-here.html">Start here</a> if you don’t know me.
+            <a href="./start-here.html">Start here</a> if you don’t know me.
             <br><br>
-            <a href="./pages/explore.html">Explore</a> my favorite content. 
+            <a href="./explore.html">Explore</a> my favorite content. 
             <br><br>
-            <a href="./pages/writings.html">Read</a> posts I’ve written.
+            <a href="./writings.html">Read</a> posts I’ve written.
             <!-- <br><br> -->
             <!-- <a href="">See</a> images I’ve made. -->
             <br><br>
