--- a/start-here.html
+++ b/start-here.html
@@ -6,12 +6,12 @@
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
         <!-- <script src="js/scripts.js"></script> -->
         <h3>
-            <a id="logo" href="../index.html">
+            <a id="logo" href="./index.html">
                 Ani Mohan
             </a>
         </h3>
