--- a/writings.html
+++ b/writings.html
@@ -6,11 +6,11 @@
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
         <!-- <script src="js/scripts.js"></script> -->
-        <a href="../index.html"> 
+        <a href="./index.html"> 
             <h3 id="logo">
                 Ani Mohan
             </h3>
