adding start here text

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <img src="./images/me.png" id="profile-pic" />
         </div>
         <p class="body-text" id="home-text">
-            I think a lot about consumer software products, media, American politics, and emerging markets. I get easily interested in new topics.    
+            I think often about consumer software products, media, American politics, emerging markets, decision making, and relationships. I get easily interested in new topics.    
             <br><br>
-            I work and play in San Francisco. I founded and run GameSnacks at <a href="https://area120.google.com/" target="_blank">Area120 @ Google</a>. 
+            I work and play in the San Francisco Bay Area. I founded and run GameSnacks at <a href="https://area120.google.com/" target="_blank">Area120 @ Google</a>. 
             <br><br>
-            <a href="./start-here.html">Start here</a> if you don’t know me.
+            <a href="./start-here.html">Start here</a> if it's your first time here.
             <br><br>
-            <a href="./explore.html">Explore</a> my favorite content. 
+            <a href="./favorites.html">Explore</a> my favorite content. 
             <br><br>
             <a href="./writings.html">Read</a> posts I’ve written.
             <!-- <br><br> -->
