--- a/start-here.html
+++ b/start-here.html
@@ -16,20 +16,32 @@
             </a>
         </h3>
         <h1 class="title">
-            Welcome
+            Welcome.
         </h1>
         <p class="body-text" id="start-here-text">            
-            I am into all sorts of cool things.
+            I am a subpar engineer, mediocre (and enthusiastic!) designer, half decent investor, pretty good strategist, strong communicator, and a darn good listener.
             <br><br>
-            I’m trying to do all sorts of cool things.
+            I’m excited to become a writer and (one day) musician.
             <br><br>
-            I’m looking to meet cool people.
+            I’m figuring out how best to apply my skills towards fulfilling work. 
             <br><br>
-            This is what I’m currently thinking about.
+            I’ve primarily been a product manager at Google, which I’ve enjoyed. 
             <br><br>
-            These are the skills I have.
+            I spend most of my time managing a team building GameSnacks at Area 120, Google’s new product incubator. GameSnacks is a lightning-fast web gaming platform primarily for emerging markets like India, Indonesia, and Nigeria. 
             <br><br>
-            These are the skills I’m working on acquiring right now.
+            I love building new ways for people to interact with each other and experience emotions and think thoughts they hadn’t before.
+            <br><br>
+            My goal with this site is to share my ideas and creative projects with others.
+            <br><br>
+            My hope is to meet potential project partners, co-workers, mentors, mentees, penpals, and friends. 
+            <br><br>
+            I most enjoy people who are curious, think for themselves, are willing to change their minds, and don’t take things too seriously (especially not themselves!). I believe this describes everyone if they’re in the right state of mind.
+            <br><br>
+            If you think we’d have a good conversation, please email me at anirudh dot c dot mohan at gmail.
+            <br><br>
+            Get to know me more by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>.
+            <br><br>
+            Thank you for visiting.
         </p>
     </body>
 </html>
