copy changes and adding images page

--- a/favorites.html
+++ b/favorites.html
@@ -16,7 +16,7 @@
             </h3>
         </a>
         <h1 class="title">
-            My favorites
+            My favorite content
         </h1>
         <p class="body-text" id="start-here-text">            
             I have lots of favorite content that I’ve consumed wooohooo.
