--- a/start-here.html
+++ b/start-here.html
@@ -19,27 +19,19 @@
             Welcome.
         </h1>
         <p class="body-text" id="start-here-text">            
-            I am a subpar engineer, mediocre (and enthusiastic!) designer, half decent investor, pretty good strategist, strong communicator, and a darn good listener.
+            My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
             <br><br>
-            I’m excited to become a writer and (one day) musician.
+            My day job is founder and lead of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>, Google’s new product incubator. I work and play in San Francisco. I’m from Northern Virginia originally and think fondly of the east coast. I love stories, ideas, and sensory experiences. 
             <br><br>
-            I’m figuring out how best to apply my skills towards fulfilling work. 
+            Get to know me better by <a href="./writings.html">reading my work</a>.
+            
+            <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
+            <!-- Get to know me best by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>. -->
+
             <br><br>
-            I’ve primarily been a product manager at Google, which I’ve enjoyed. 
+            I’d love to meet potential project partners, co-workers, mentors, mentees, penpals, and friends. I enjoy people who are kind, playful, think for themselves, and optimistic. 
             <br><br>
-            I spend most of my time managing a team building GameSnacks at Area 120, Google’s new product incubator. GameSnacks is a lightning-fast web gaming platform primarily for emerging markets like India, Indonesia, and Nigeria. 
-            <br><br>
-            I love building new ways for people to interact with each other and experience emotions and think thoughts they hadn’t before.
-            <br><br>
-            My goal with this site is to share my ideas and creative projects with others.
-            <br><br>
-            My hope is to meet potential project partners, co-workers, mentors, mentees, penpals, and friends. 
-            <br><br>
-            I most enjoy people who are curious, think for themselves, are willing to change their minds, and don’t take things too seriously (especially not themselves!). I believe this describes everyone if they’re in the right state of mind.
-            <br><br>
-            If you think we’d have a good conversation, please email me at anirudh dot c dot mohan at gmail.
-            <br><br>
-            Get to know me more by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>.
+            Please email me at anirudh dot c dot mohan at gmail if you think we’d have a good conversation.
             <br><br>
             Thank you for visiting.
         </p>
