--- a/index.html
+++ b/index.html
@@ -17,19 +17,16 @@
             <img src="./images/me.png" id="profile-pic" />
         </div>
         <p class="body-text" id="home-text">
-            I think often about consumer software products, media, American politics, emerging markets, decision making, and relationships. I get easily interested in new topics.    
-            <br><br>
-            I work and play in the San Francisco Bay Area. I founded and run GameSnacks at <a href="https://area120.google.com/" target="_blank">Area120 @ Google</a>. 
+            Welcome to my home on the internet.
             <br><br>
             <a href="./start-here.html">Start here</a> if it's your first time here.
             <br><br>
-            <a href="./favorites.html">Explore</a> my favorite content. 
-            <br><br>
-            <a href="./writings.html">Read</a> posts I’ve written.
+            <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
+            <!-- <a href="./favorites.html">Explore</a> my favorite content.  -->
             <!-- <br><br> -->
-            <!-- <a href="">See</a> images I’ve made. -->
+            <a href="./writings.html">Read</a> posts I’ve written.
             <br><br>
-            Reach out via <a href="https://twitter.com/ani_c_mohan" target="_blank">Twitter</a> or email at anirudh dot c dot mohan at gmail.
+            <a href="./my-images.html">See</a> images I’ve made.
         </p>
     </body>
 </html>
