--- a/writings/consumer-social-has-lots-of-room-to-grow.html
+++ b/writings/consumer-social-has-lots-of-room-to-grow.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <!-- <script src="js/scripts.js"></script> -->
