Adding making posters blog post

--- a/my-images.html
+++ b/my-images.html
@@ -20,7 +20,7 @@
         </h1>
         <div class="body-text" id="start-here-text">            
             <p>
-                I love visual art, especially modern art. I make images beacuse making images helps me better appreciate looking at others' art. 
+                The process of making images forces me to think about why certain visuals are beautiful.
             </p>
             <br>
             <h2>Posters</h2>
