--- a/writings.html
+++ b/writings.html
@@ -19,11 +19,9 @@
             Writings
         </h1>
         <p class="body-text" id="start-here-text">            
-            <a href="./writings/consumer-social-has-lots-of-room-to-grow.html">Consumer social has lots of room to grow</a><span class="writing-date-color"> (Dec 2019)</span>
+            <!-- <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color"> (Feb 2020)</span> -->
             <br><br>
-            <a href="">American politics hasn't caught on to tech</a><span class="writing-date-color"> (Aug 2019)</span>            
-            <br><br>
-            <a href="">How to be a thought-leader</a><span class="writing-date-color"> (Mar 2019)</span>     
+            <a href="./writings/making-posters.html">Making posters</a><span class="writing-date-color"> (Jan 2020)</span>             
         </p>
     </body>
 </html>
