--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>Consumer social has lots of room to grow</title>
-        <meta name="description" content="Consumer social has lots of room to grow">
+        <title>Five days at Sundance</title>
+        <meta name="description" content="Five days at Sundance">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
@@ -15,11 +15,11 @@
                 Ani Mohan
             </a>
         </h3>
-        <h1 class="writing-title">
-            Consumer social has lots of room to grow
+        <h1 class="title">
+            Five days at Sundance
         </h1>
         <p class="writing-date-title">
-            Dec 2019
+            Feb 2020
         </p>
         <p class="writing-text">            
             This is an interesting blog post. Why is it interesting? Hmm. Maybe it has something to do with this.
