favicon and google analytics

--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -6,7 +6,16 @@
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="../images/favicon.png">
         <link rel="stylesheet" href="../css/styles.css">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-158669626-1');
+        </script>       
     </head>
     <body>
         <!-- <script src="js/scripts.js"></script> -->
