adding sundance post

--- a/start-here.html
+++ b/start-here.html
@@ -30,7 +30,7 @@
         <p class="body-text" id="start-here-text">            
             My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
             <br><br>
-            My day job is founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>, Google’s new product incubator. I work and play in San Francisco. I’m from Northern Virginia originally and think fondly of the east coast. I love stories, ideas, and sensory experiences. 
+            My day job is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I work and play in San Francisco. I’m from Northern Virginia originally and think fondly of the east coast. I love stories, ideas, and sensory experiences. 
             <br><br>
             Get to know me better by <a href="./writings.html">reading my work</a>.
             
