--- a/writings.html
+++ b/writings.html
@@ -28,7 +28,8 @@
             Writings
         </h1>
         <p class="body-text" id="start-here-text">            
-            <!-- <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color"> (Feb 2020)</span> -->
+            <br><br>
+            <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color"> (Feb 2020)</span>
             <br><br>
             <a href="./writings/making-posters.html">Making posters</a><span class="writing-date-color"> (Jan 2020)</span>             
         </p>
