--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Five days at Sundance">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="../images/favicon.png">
         <link rel="stylesheet" href="../css/styles.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -15,7 +15,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'UA-158669626-1');
-        </script>       
+        </script>   
     </head>
     <body>
         <!-- <script src="js/scripts.js"></script> -->
@@ -24,20 +24,98 @@
                 Ani Mohan
             </a>
         </h3>
-        <h1 class="title">
-            Five days at Sundance
-        </h1>
-        <p class="writing-date-title">
-            Feb 2020
-        </p>
-        <p class="writing-text">            
-            This is an interesting blog post. Why is it interesting? Hmm. Maybe it has something to do with this.
-            <br><br>
-            But what if it has something to do with that?
-            <br><br>
-            Let's take a closer look.
-            <br><br>
-            Wow that was super exhilarating I've never seen a nuanced and thoughtful perspective like that. I truly am a god.
-        </p>
+        <div class="writing-header">
+            <h1 class="writing-title">
+                Five days at Sundance
+            </h1>
+            <p class="writing-date">
+                Feb 2020
+            </p>
+            <p class="writing-body-text">            
+                Last month, I spent five days in Park City, Utah at the <a href="https://www.sundance.org/" target="_blank">Sundance Film Festival</a>. I don’t work in the film industry -- I’m a founder of a gaming company in San Francisco. 
+                <br><br>
+                But, I love films and creative communities. My friend Debbie told me Sundance provides both in spades, so I decided I had to go.
+                <br><br>
+                I had high expectations going in. By the end of the second day, they’d been knocked out of the park.
+                <br><br>
+                Here’s why.
+                <br><br>                                
+                <b class="writing-section-lead">Park City is an ideal venue</b>
+                <br><br>
+                I wasn't familiar with Park City before Sundance. I knew it was within driving distance of Salt Lake City. My friends told me it’s a world-renowned ski destination. I don’t really care about skiing, so in my head it was just a tiny town of 7,000 residents.
+                <br><br>
+                As soon as I arrived I was struck by how gorgeous it is:
+                <br><br>
+                <img src="./writings-images/five-days-at-sundance/park_city_1.jpg" class="my-images-preview" />
+                <br><br>
+                <img src="./writings-images/five-days-at-sundance/park_city_2.jpg" class="my-images-preview" />
+                <br><br>
+                <img src="./writings-images/five-days-at-sundance/park_city_3.jpg" class="my-images-preview" />
+                <br><br>
+                Park City is a winter wonderland. It feels otherworldly, like films.
+                <br><br>
+                The city’s smallness also makes the festival feel cozy. There aren’t many standalone theaters in the city. Sundance organizers have to convert libraries, hotel lobbies, and basketball courts into screening areas for the duration of the festival.
+                <br><br>
+                The city is also frigid. Average lows were 15 degrees Fahrenheit. If you don’t ski, you don’t miss being outside. People are bundled up the entire day in hats, scarves, puffer jackets, and gloves. They’re focused on staying warm, not looking cute.
+                <br><br>                
+                In these conditions, watching films is the perfect activity.                
+                <br><br>                
+                <b class="writing-section-lead">A story-obsessed community</b>
+                <br><br>
+                Unlike in San Francisco, I felt like a shiny toy as a tech entrepreneur amongst the film crowd. All of the directors, producers, screenwriters, and actors I met (courtesy of <a href="https://www.woodside.co/" target="_blank">Woodside</a>) engaged with my whimsical questions. Why does it take so long to make a movie? (Fundraising is hard). Why aren’t indie films more popular? (Nobody’s cracked distribution). Why aren’t more films shot entirely on an iPhone? (Hmm, not sure...). 
+                <br><br>
+                Every industry has a social currency. People who possess the currency command disproportionate attention. In most industries this currency is either (1) money or (2) relationships with power brokers. While both of these hold value in the film industry, I got the sense the creativity of your story and your ideas is more valuable. Do you have a new perspective? Do you ask provocative questions? How are you unique? 
+                <br><br>
+                I love this currency because it’s more equitable to attain. It levels the playing field for outsiders. It’s also more fun!
+                <br><br>
+                Sundance is an industry festival, though, and lots of attendees had explicit goals for the week. Secure funding for a film. Land an acting role. Find collaborators. That being said, people (especially directors and producers) were refreshingly open about these goals while maintaining a sense of play and creativity. They danced between banter and business quite well.
+                <br><br>
+                But enough about Park City and the people. Let’s get on to the films.
+                <br><br>                
+                <b class="writing-section-lead">The big picture</b>
+                <br><br>
+                Again courtesy of Woodside, I got tickets to almost everything I wanted to see. Every screening was sold out, and nearly every one had the director stick around afterwards for a 10 minute Q&A. Fellow moviegoers were chatty after the showings, eager to debrief what they had just seen. The whole thing was a film lover's dream.
+                <br><br>
+                I’ve written <a href="#reviews">brief reviews</a> of the films at the end of the post. 
+                <br><br>
+                Below are four takeaways from what I saw:
+                <br><br>
+                1. <b>Distribution is hard</b>. There are so many high quality films being made that don’t get wide release in theaters or on streaming services. Documentaries, shorts, international films, dramatic films, animated films -- you name it. I wish we had more ways for more people to see more movies.
+                <br><br>
+                2. <b>Bring on the shorts</b>. Short films (15 to 40 minute films) are perfect for short attention spans. Streaming services are experimenting with miniseries in which each episode is a standalone story (e.g. High Maintenance). However, I can’t think of any online or physical destination I can attend to watch a bunch of high quality short films. Why is that? (And no, I don’t mean mobile shorts like Quibi). 
+                <br><br>                
+                3. <b>We need more optimism</b>. Most films I saw were gloomy and pessimistic, perhaps a reflection of our mood in February 2020. They were great films, but I wish we were telling more optimistic stories too. The stories we tell, read, and see can also shape our mood.
+                <br><br>                
+                4. <b>Asian films are having a moment</b>. Minari, a film about Korean American immigrants in the 1980s, swept both audience and critic awards (unfortunately I didn’t see it). Films like The Farewell and Parasite and now Minari prove Asian films can garner critical acclaim. As an Indian American, I’m pumped and am wondering when award-winning Indian stories will be told.
+                <br><br>                
+                A big thank you to Shuhan He for housing me, the Woodside community for being so welcoming, Jennifer Lee for orchestrating the whole thing, and Debbie Lai for introducing me to Sundance.
+                <br><br>                                
+                If you have any thoughts, comments, or ideas based on anything I shared, please 
+                <a href="mailto:anirudh.c.mohan@gmail.com">email me</a> and let’s discuss!
+                <br><br>
+                <b class="writing-section-lead" id="reviews">Film reviews</b>
+                <br><br>
+                I’d recommend watching everything rated 4 stars or above.
+                <br><br>
+                <b>The Social Dilemma</b>: 3 stars. Documentary about social media addiction. I’m glad we’re having the discussion, but I was disappointed it wasn’t more nuanced. The fact that so many audience members were shocked their kids were addicted to social media alarmed me.
+                <br><br>
+                <b>Dick Johnson is Dead</b>: 5 stars. Documentary following the last two years of the filmmaker’s father’s life. Its tone felt unique: equal parts joyful, wistful, and hilarious. The film raised important questions around how we treat the elderly and regard death in the U.S. 
+                <br><br>
+                <b>Saudi Runaway</b>: 5 stars. Documentary first-person account of a woman named Muna plotting her escape from Saudi Arabia. The director met Muna online a few months prior to her escape and taught her how to shoot footage on a smartphone.
+                <br><br>
+                <b>The Nest</b>: 3.5 stars. Drama about a marriage going awry after a cross-continent move. The characters were one-dimensional and evoked little empathy. A far cry from Marriage Story. Great cinematography, though.
+                <br><br>
+                <b>Church and the Fourth Estate</b>: 4.5 stars. Documentary short about the press and legal battles surrounding the first Boy Scouts sexual assault case. Raised two thought-provoking questions. How do you both care deeply for an institution while exposing its dark underbelly? How do we revive local journalism?
+                <br><br>
+                <b>Palm Springs</b>: 4 stars. Rom com with a twist. I hate formulaic rom coms, but I love ones that subvert the genre. I won’t spoil it here. Palm Springs is absurd, philosophical, and absurd. It’s also gorgeously shot.
+                <br><br>
+                <b>Feels Good Man</b>: 5 stars. Documentary about the rise of “Pepe the Frog”, originally a cartoon character and now a widely shared meme. Told through the eyes of Pepe’s creator, the film raised urgent questions. Who’s responsible for an innocent idea twisted into something grotesque on the internet? What moral obligations do artists have? 
+                <br><br>
+                <b>Nine Days</b>: 5 stars. My favorite Sundance film. The premise is simple, yet profound: a world where once you die, you get to decide who’s born next. The cinematography, acting, and score are brilliant. 
+                <br><br>
+                <b>Wendy</b>: 2 stars. Retelling of Peter Pan from Wendy’s perspective. Slow and serious, ironic for a film about childhood.
+            </p>
+        </div>
+        
     </body>
 </html>
