--- a/writings/making-posters.html
+++ b/writings/making-posters.html
@@ -40,7 +40,7 @@
                 <br><br>
                 I begin by considering what I want a poster to mean to me. Since I stare at my walls every day, my posters can remind me of principles I care about. When looking at my posters, others might see an ordinary image while I’d appreciate their hidden significance. 
                 <br><br>
-                For example, an important principle to me is to “zoom out”. “Zoom out” reminds me to shift  perspective and escape the minute of everyday anxieties. This principle became the foundation of my first poster. 
+                For example, an important principle to me is to “zoom out”. “Zoom out” reminds me to shift  perspective and escape the minutiae of everyday anxieties. This principle became the foundation of my first poster. 
                 <br><br>
                 Next, I consider which visual metaphors would best represent a principle. For my first poster, I thought a great representation of “zoom out” would be a view of earth from a faraway planet. I’ll refer to this poster as <a href="https://en.wikipedia.org/wiki/Pale_Blue_Dot" target="_blank">Pale Blue Dot</a>.
                 <br><br>
@@ -65,7 +65,7 @@
                 <br><br>
                 <b class="writing-section-lead">Design with Figma</b>
                 <br><br>
-                You should skip this section if you’re not interested in the software I use to make posters.
+                <b class="writing-caption">You should skip this section if you’re not interested in the software I use to make posters.</b>
                 <br><br>
                 Vector illustration software is great for designing posters. Vector graphics are created using mathematical formulas rather than specifying the colors of specific pixels. This means vector graphics can be resized to any arbitrary size without compromising quality.
                 <br><br>
