small tweak to sundance post

--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -32,7 +32,7 @@
                 Feb 2020
             </p>
             <p class="writing-body-text">            
-                Last month, I spent five days in Park City, Utah at the <a href="https://www.sundance.org/" target="_blank">Sundance Film Festival</a>. I don’t work in the film industry -- I’m a founder of a gaming company in San Francisco. 
+                Last month, I spent five days in Park City, Utah at the <a href="https://www.sundance.org/" target="_blank">Sundance Film Festival</a>. I don’t work in the film industry -- I’m a founder of a gaming startup in San Francisco. 
                 <br><br>
                 But, I love films and creative communities. My friend Debbie told me Sundance provides both in spades, so I decided I had to go.
                 <br><br>
