tweaking bio pages and removing timestamps from posts

--- a/start-here.html
+++ b/start-here.html
@@ -30,17 +30,14 @@
         <p class="body-text" id="start-here-text">            
             My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
             <br><br>
-            My day job is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I work and play in San Francisco. I’m from Northern Virginia originally and think fondly of the east coast. I love stories, ideas, and sensory experiences. 
+            My day job is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I spend most of my time in San Francisco. I love stories, ideas, and sensory experiences. 
             <br><br>
-            Get to know me better by <a href="./writings.html">reading my work</a>.
+            Get to know me better by <a href="./writings.html">reading stuff I've written</a>.
             
             <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
-            <!-- Get to know me best by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>. -->
-
+            <!-- Get to know me best by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>. -->            
             <br><br>
-            I’d love to meet potential project partners, co-workers, mentors, mentees, penpals, and friends. I enjoy people who are kind, playful, think for themselves, and optimistic. 
-            <br><br>
-            Please email me at anirudh dot c dot mohan at gmail if you think we’d have a good conversation.
+            Please <a href="mailto:anirudh.c.mohan@gmail.com">email me</a> if you think we’d have a good conversation. I especially enjoy people who are kind, curious, think for themselves, and optimistic. 
             <br><br>
             Thank you for visiting.
         </p>
