--- a/writings.html
+++ b/writings.html
@@ -29,9 +29,10 @@
         </h1>
         <p class="body-text" id="start-here-text">            
             <br><br>
-            <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color"> (Feb 2020)</span>
+            <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color">                
+            </span>
             <br><br>
-            <a href="./writings/making-posters.html">Making posters</a><span class="writing-date-color"> (Jan 2020)</span>             
+            <a href="./writings/making-posters.html">Making posters</a><span class="writing-date-color"></span>             
         </p>
     </body>
 </html>
