--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -28,11 +28,8 @@
             <h1 class="writing-title">
                 Five days at Sundance
             </h1>
-            <p class="writing-date">
-                Feb 2020
-            </p>
             <p class="writing-body-text">            
-                Last month, I spent five days in Park City, Utah at the <a href="https://www.sundance.org/" target="_blank">Sundance Film Festival</a>. I don’t work in the film industry -- I’m a founder of a gaming startup in San Francisco. 
+                I spent five days in Park City, Utah at the <a href="https://www.sundance.org/" target="_blank">2020 Sundance Film Festival</a>. I don’t work in the film industry -- I’m a founder of a gaming startup in San Francisco. 
                 <br><br>
                 But, I love films and creative communities. My friend Debbie told me Sundance provides both in spades, so I decided I had to go.
                 <br><br>
