adding posters page

--- a/my-images.html
+++ b/my-images.html
@@ -25,14 +25,9 @@
             </h3>
         </a>
         <h1 class="title">
-            My images
+            Posters I've made
         </h1>
         <div class="body-text" id="start-here-text">            
-            <p>
-                The process of making images forces me to think about why certain visuals are beautiful.
-            </p>
-            <br>
-            <h2>Posters</h2>
             <a href="./images/my-images/poster_pale_blue_dot.png" target="_blank">
                 <img src="./images/my-images/poster_pale_blue_dot.png" class="my-images-preview" />
             </a>
