--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- <br><br> -->
             <a href="./writings.html">Read</a> posts I’ve written.
             <br><br>
-            <!-- <a href="./my-images.html">See</a> images I’ve made. -->
+            <a href="./my-images.html">See</a> posters I’ve made.
         </p>
     </body>
 </html>
