fixing copy on home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
             <!-- <a href="./favorites.html">Explore</a> my favorite content.  -->
             <!-- <br><br> -->
-            <a href="./writings.html">Read</a> posts I’ve written.
+            <a href="./writings.html">Read</a> stuff I’ve written.
             <br><br>
             <a href="./my-images.html">See</a> posters I’ve made.
         </p>
