--- a/my-images.html
+++ b/my-images.html
@@ -25,7 +25,7 @@
             </h3>
         </a>
         <h1 class="title">
-            Posters I've made
+            Posters
         </h1>
         <div class="body-text" id="start-here-text">            
             <a href="./images/my-images/poster_pale_blue_dot.png" target="_blank">
