fixing a bunch of spacing stuff with titles

--- a/start-here.html
+++ b/start-here.html
@@ -25,7 +25,7 @@
             </a>
         </h3>
         <h1 class="title">
-            Welcome.
+            Welcome
         </h1>
         <p class="body-text" id="start-here-text">            
             My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
