adding inner life poster

--- a/my-images.html
+++ b/my-images.html
@@ -35,6 +35,10 @@
             <a href="./images/my-images/poster_cascais.png" target="_blank">
                 <img src="./images/my-images/poster_cascais.png" class="my-images-preview" />
             </a>
+            <br><br>
+            <a href="./images/my-images/poster_inner_life.png" target="_blank">
+                <img src="./images/my-images/poster_inner_life.png" class="my-images-preview" />
+            </a>            
         </div>
         
     </body>
