--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>Five days at Sundance</title>
+        <title>Five days at Sundance - Ani Mohan</title>
         <meta name="description" content="Five days at Sundance">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
