--- a/writings/making-posters.html
+++ b/writings/making-posters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>Making posters</title>
+        <title>Making posters - Ani Mohan</title>
         <meta name="description" content="Making posters">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
