renaming images to posters

--- a/posters.html
+++ b/posters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>My Images - Ani Mohan</title>
+        <title>Posters - Ani Mohan</title>
         <meta name="description" content="Ani Mohan images posters digital art vector art personal site">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,16 +28,16 @@
             Posters
         </h1>
         <div class="body-text" id="start-here-text">            
-            <a href="./images/my-images/poster_pale_blue_dot.png" target="_blank">
-                <img src="./images/my-images/poster_pale_blue_dot.png" class="my-images-preview" />
+            <a href="./images/posters/poster_pale_blue_dot.png" target="_blank">
+                <img src="./images/posters/poster_pale_blue_dot.png" class="my-images-preview" />
             </a>
             <br><br>
-            <a href="./images/my-images/poster_cascais.png" target="_blank">
-                <img src="./images/my-images/poster_cascais.png" class="my-images-preview" />
+            <a href="./images/posters/poster_cascais.png" target="_blank">
+                <img src="./images/posters/poster_cascais.png" class="my-images-preview" />
             </a>
             <br><br>
-            <a href="./images/my-images/poster_inner_life.png" target="_blank">
-                <img src="./images/my-images/poster_inner_life.png" class="my-images-preview" />
+            <a href="./images/posters/poster_inner_life.png" target="_blank">
+                <img src="./images/posters/poster_inner_life.png" class="my-images-preview" />
             </a>            
         </div>
         
